# signex-kicad-import

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/kicad-parser/: Cargo.toml
crates/kicad-parser/src/: error.rs  lib.rs  pcb.rs  schematic.rs  sexpr.rs  sexpr_builder.rs  symbol_lib.rs
crates/kicad-writer/: Cargo.toml
crates/kicad-writer/src/: lib.rs  pcb.rs  schematic.rs  sexpr_render.rs
crates/signex-types/: Cargo.toml
crates/signex-types/docs/: pin-design.md
crates/signex-types/src/: coord.rs  format.rs  layer.rs  lib.rs  markup.rs  net.rs  pcb.rs  project.rs  property.rs  schematic.rs  theme.rs  violation.rs
docs/audit/: v012-renderer-adoption-2026-05-02.md
