[workspace]
members = ["crates/kicad-parser", "crates/kicad-writer", "crates/cli"]
resolver = "2"

[workspace.package]
license = "GPL-3.0-or-later"
edition = "2024"
version = "0.1.0"
authors = ["Caner Alp <caner.alp@alpelectronix.com>"]
repository = "https://github.com/alplabai/signex-kicad-import"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identity
uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# External Signex types crate (Apache-2.0). Sourced from the local
# signex repo via path while signex-types is unpublished.
# TODO(release): switch to crates.io once signex-types is published.
signex-types = { path = "../signex/crates/signex-types" }

# Internal crates of this companion repo
kicad-parser = { path = "crates/kicad-parser" }
kicad-writer = { path = "crates/kicad-writer" }
